--- a/index.html
+++ b/index.html
@@ -5,13 +5,8 @@
         <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <h1>FirstName LastName</h1>
-        <p>I'm learning to code on Codecademy! My goals include:</p>
-        <ul>
-            <li>Learn to code</li>
-            <li>Start a company</li>
-            <li>Help the world</li>
-        </ul>
-        <p>This is one of my favorite websites: <a href="https://www.google.com/" target="_blank">Google</a></p>       
-     </body>
+        <h1>Daniel Borjas</h1>
+        <p>Welcome to my first GitHub Page!</p>
+        <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    </body>
 </html>
